Calculator display z-index fix and mobile bug fix

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -280,6 +280,7 @@ h6.money {
 		}
 		#display {
 					width: 80%;
+					z-index: 10000;
 				}
 		.shrink {
 			font-size: 15px;
